# spotter

./: .env.tmp  README.rst  pyproject.toml
src/: main.py  slackclient.py
src/api/: api.py  bot.py
src/aws/: ec2.py
src/core/: config.py
src/slackbot/: instances.py  plugins.py  send.py  sender.py
